fix: Adjust line-height properties for type-display utility for improved readability

--- a/styles/scss/utilities/_utility.scss
+++ b/styles/scss/utilities/_utility.scss
@@ -38,7 +38,7 @@
 
 /* Type scale utilities */
 .type-display {
-    @apply font-js-math tracking-wide text-[5ch] sm:text-[6ch] lg:text-[8ch] 2xl:text-[11ch];
+    @apply font-js-math tracking-wide text-[5ch] sm:text-[6ch] lg:text-[8ch] 2xl:text-[11ch] leading-tight sm:leading-none lg:leading-[1.35] 2xl:leading-[1.4];
 }
 
 .type-hero {
